# kafka-data-subscriber

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.git.bfg-report/2023-10-29/20-32-45/: cache-stats.txt  object-id-map.old-new.txt
.git.bfg-report/2023-10-29/20-32-45/protected-dirt/: ab4217ce-HEAD.csv
resources/: config.toml
src/: data_publisher.rs  data_subscriber.rs  kafka_client_provider.rs  kafka_data_publisher.rs  kafka_data_subscriber.rs  lib.rs  receiver.rs  sender.rs
src/config/: kafka.rs  kafka_client_provider.rs  mod.rs
src/data_publisher/: kafka_data_publisher.rs  mod.rs
src/data_subscriber/: kafka_data_subscriber.rs  mod.rs
src/test/: mod.rs  publisher_test.rs
src/test/kafka_test_containers/: kafka_testcontainer_test.rs  mod.rs
src/test/kafka_test_containers/kafka_image/: mod.rs
